--- a/app/views/clippings/show.html.erb
+++ b/app/views/clippings/show.html.erb
@@ -1,20 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Title:</b>
+  <b>Page Title:</b>
   <%= @clipping.title %>
 </p>
 
 <p>
-  <b>Content:</b>
+  <b>Text (content):</b>
   <%= @clipping.content %>
 </p>
 
 <p>
   <b>Url:</b>
-  <%= @clipping.url %>
+  <%= link_to @clipping.url %>
 </p>
 
+<p>
+  <b>Notebook:</b>
+  <%= @clipping.notebook.name %>
+</p>
 
 <%= link_to 'Edit', edit_clipping_path(@clipping) %> |
 <%= link_to 'Back', clippings_path %>
