--- a/app/views/notebooks/show.html.erb
+++ b/app/views/notebooks/show.html.erb
@@ -3,7 +3,10 @@
 <p>
   <b>Name:</b>
   <%= @notebook.name %>
-</p>
+  </p>
+  <% @notebook.clippings.each do |clip| %>
+    <%= clip.title %></br>
+  <% end %>
 
 
 <%= link_to 'Edit', edit_notebook_path(@notebook) %> |
