--- a/app/views/notebooks/_form.html.erb
+++ b/app/views/notebooks/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="form-stacked">
 <%= form_for(@notebook) do |f| %>
   <% if @notebook.errors.any? %>
     <div id="error_explanation">
@@ -19,3 +20,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
