--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
 <head>
   <title>Clipper</title>
   <%= stylesheet_link_tag :all %>
+  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
+  <div class="container">
+    <div class="content">
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
